fix: invisible text #46

--- a/src/assets/fonts/Montserrat/Montserrat.css
+++ b/src/assets/fonts/Montserrat/Montserrat.css
@@ -4,6 +4,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('Monterrat'), local('Monterrat-Regular');
+  font-display: swap;
 }
 /* cyrillic */
 @font-face {
@@ -11,6 +12,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('Monterrat'), local('Monterrat-Regular');
+  font-display: swap;
 }
 /* greek-ext */
 @font-face {
@@ -18,6 +20,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('Monterrat'), local('Monterrat-Regular');
+  font-display: swap;
 }
 /* greek */
 @font-face {
@@ -25,6 +28,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('Monterrat'), local('Monterrat-Regular');
+  font-display: swap;
 }
 /* vietnamese */
 @font-face {
@@ -32,6 +36,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('Monterrat'), local('Monterrat-Regular');
+  font-display: swap;
 }
 /* latin-ext */
 @font-face {
@@ -39,6 +44,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('Monterrat'), local('Monterrat-Regular');
+  font-display: swap;
 }
 /* latin */
 @font-face {
@@ -46,4 +52,5 @@
   font-style: normal;
   font-weight: 400;
   src: local('Monterrat'), local('Monterrat-Regular');
+  font-display: swap;
 }
